# MyHTTP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
examples/: SimpleServer.cpp
include/: HTTPRequest.h  HTTPResponse.h  Parser.h  ResponseGenerator.h  Router.h  Server.h  WorkerPool.h
public/: index.html
public/test/: index.html
public_html/: coestatement.html  index.html  projects.html  test.txt
public_html/cs290/HW1-moleskij/: index.html
public_html/cs290/HW2-moleskij/: contact.html  index.html  interests.html
public_html/cs290/HW3-moleskij/: Thumbs.db  contact.html  index.html  interests.html  main.css  style.html
public_html/cs290/HW3-moleskij/images/: Thumbs.db
public_html/cs381/: hw3.html
public_html/images/: Thumbs.db
src/: HTTPResponse.cpp  Parser.cpp  ResponseGenerator.cpp  Router.cpp  Server.cpp  WorkerPool.cpp  main.cpp
tests/: CMakeLists.txt  TestIntegration.cpp  TestParser.cpp  TestResponses.cpp  TestWorkerPool.cpp  wrkTest.txt
